added extra text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="item">
                             <img class="img-rounded" src="images/projects/placeholder.png" alt="stock img computer"  />
                             <h2>Great Hero's Beard</h2>
-                            <p>At Oneshark I have coded a game named Great Hero's Beard which has now sold over 50,000 units internationally.</p>
+                            <p>At Oneshark I have coded a game named Great Hero's Beard which has now sold over 50,000 units internationally. Technology utilized: Spine Animation, Steamworks API, Unity 3D, C#.</p>
                         </div>
                         <div class="item">
                             <img class="img-rounded" src="images/projects/placeholder.png" alt="stock img computer"  />
