--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h2>Contact</h2>
 <div class="group">
     <div class="item">
-       <form>
+         <form action="https://formspree.io/moqkojvd" method="POST">
     <label for="name">Name:</label>
     <input id="name" type="text" name="name"
      placeholder=""/>
