--- a/index.html
+++ b/index.html
@@ -53,16 +53,19 @@
                                 The sports app I worked on for a client was pitched to Dave & Busters restaurants and other chains to simulate sports trivia on their screens during athletic events. It utilized AWS function, Playfab, Mongo
                                 and a sports data API.
                             </p>
+                            <a href="#">Sports Trivia App Project</a>
                         </div>
                         <div class="item">
                             <img class="img-rounded" src="images/projects/placeholder.png" alt="stock img computer"  />
                             <h2>Great Hero's Beard</h2>
                             <p>At Oneshark I have coded a game named Great Hero's Beard which has now sold over 50,000 units internationally. Technology utilized: Spine Animation, Steamworks API, Unity 3D, C#.</p>
+                            <a href="https://store.steampowered.com/app/935270/Great_Heros_Beard/">Great Hero's Beard Project</a>
                         </div>
                         <div class="item">
                             <img class="img-rounded" src="images/projects/placeholder.png" alt="stock img computer"  />
                             <h2>Request Capex App</h2>
                             <p>For a corporate client I developed within PowerApps and Microsoft Flow, an app which will allow approval chaining and some calculations to assist in the capital assets request process.</p>
+                             <a href="#">Capex Project</a>
                         </div>
                     </div>
                 </article>
